--- a/src/styles.css
+++ b/src/styles.css
@@ -9,10 +9,8 @@ body {
   width: 100vw;
   height: 100vh;
   position: relative;
-  background-image: url("https://i.postimg.cc/50dWXJns/fondo-final.jpg");
+  background: url("https://i.postimg.cc/50dWXJns/fondo-final.jpg") no-repeat center center fixed;
   background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
